finalizando pagina principal, fazendo projetos

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Elizabeth</title>
 </head>
+
 <body>
-  <header>
-    <div class="header-wrapper">
+  <header class="header-wrapper">
+    <div class="header">
       <div class="checkbox-container">
         <div class="checkbox-wrapper">
           <input type="checkbox" id="toggle">
@@ -18,24 +19,94 @@
             <div class="trace"></div>
             <div class="trace"></div>
           </label>
-          <div class="menu">
-            <nav class="menu-items">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Projetos</a></li>
-              </ul>
-            </nav>          
-          </div>         
+          <div class="menu"></div>
+          <nav class="menu-items">
+            <ul>
+              <li>
+                <a href="./index.html">Home</a>
+              </li>
+              <li>
+                <a href="./contato.html">Contatos</a>
+              </li>
+              <li>
+                <a href="./projetos.html">Projetos</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
-      <h1>Elizabeth dos Santos</h1>
-      <h2> FrontEnd Developer</h2>
-      <div class="social-midia">
-        <a href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank">Linkedin</a>
-        <a href="https://github.com/elizabethesantos" target="_blank">Github</a>
+    </div>
+    
+    <div class="title">
+      <div class="title-text">
+        <h1>Elizabeth dos Santos </h1>
+        <h2>FrontEnd Developer</h2>
+      </div>
+      <div class="image-title">
+        <img src="./assets/elizabeth.jpeg"  alt="elizabeth">
       </div>
     </div>
+   
+    <div class="social-midia">
+      <a href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank">Linkedin</a>
+      <a href="https://github.com/elizabethesantos" target="_blank">Github</a>
+      <a href="./projetos.html">Meus projetos</a>
+    </div>
   </header>
+  <main class="container">
+    <div class="card-container">
+      <div class="card-text">
+        <p>
+          Veja meus projetos e minha evolução através do meu <a href="https://github.com/elizabethesantos"
+            target="_blank"> Github </a>. Cada projeto foi feito com muita dedicação e tenho
+          muito orgulho de aprender e evoluir sempre.
+        </p>
+      </div>
+      <div class="card">
+        <div class="card-wrapper">
+          <h2>Github</h2>
+          <p>Veja meus projetos!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card">
+        <div class="card-wrapper">
+          <h2>Linkedin</h2>
+          <p>Vem ver minha carreira profissional!</p>
+        </div>
+      </div>
+      <div class="card-text">
+        <p>
+          Veja minha evolução profissional e aprendizado através do meu <a
+            href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank"> Linkedin </a>.
+        </p>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-text">
+        <p>
+          Veja um pouquinho da minha vida pessoal através do meu <a
+            href="https://www.instagram.com/elizabethsantos2487/" target="_blank"> Instagram </a>. Sou uma mulher
+          Transexual em busca de evolução pessoal e profissional. Tenho muito orgulho de quem sou.
+        </p>
+      </div>
+      <div class="card">
+        <div class="card-wrapper">
+          <h2>Instagram</h2>
+          <p>Ou mais do meu dia-a-dia ;)</p>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="footer">
+      <p> Feito por Elizabeth dos Santos </p>
+      <a href="https://wa.me/5519983511606" target="_blank">WhatsApp</a>
+    </div>
+  </footer>
 </body>
+
 </html>
