terminando a pagina de projetos

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
         </div>
       </div>
     </div>
-    
+
     <div class="title">
       <div class="title-text">
         <h1>Elizabeth dos Santos </h1>
         <h2>FrontEnd Developer</h2>
       </div>
       <div class="image-title">
-        <img src="./assets/elizabeth.jpeg"  alt="elizabeth">
+        <img src="./assets/elizabeth.jpeg" alt="elizabeth">
       </div>
     </div>
-   
+
     <div class="social-midia">
       <a href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank">Linkedin</a>
       <a href="https://github.com/elizabethesantos" target="_blank">Github</a>
@@ -104,9 +104,10 @@
   <footer>
     <div class="footer">
       <p> Feito por Elizabeth dos Santos </p>
-      <a href="https://wa.me/5519983511606" target="_blank">WhatsApp</a>
+      <a href="https://wa.me/5519983511606" target="_blank">
+        <img src="icon-watts.svg" alt="icone WhatsApp">
+      </a>
     </div>
   </footer>
 </body>
-
 </html>
