--- a/projetos.html
+++ b/projetos.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfólio Elizabeth</title>
-  <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -44,7 +43,7 @@
         <h2>Meus Projetos</h2>
       </div>
       <div class="image-title">
-        <img src="./assets/elizabeth.jpeg"  alt="elizabeth">
+        <img src="./assets/elizabeth.jpeg" alt="elizabeth">
       </div>
     </div>
     <div class="social-midia">
@@ -84,42 +83,144 @@
       </div>
     </div>
 
-    
-    
-   
-    <h2>HTML Classico - Curso em Vídeo</h2>
-    <p>
-      Curso ministrado por Gustavo Guanabara no canal do youtube Curso em
-      Vídeo, Canal voltado para pessoas iniciantes que queiram programar.
-      O site foi feito em Html, Css, javascript.
-    </p>
-    <a href="https://projeto-glass-cursoemvideo.netlify.app/" target="-blank">Projeto Glass</a>
-    <h2>Projeto Codaí - Growdev</h2>
-    <p>
-      Projeto Codaí, oferecido pela GrowDev. Site feito em Bootstrap, Css,
-      Javascript.
-    </p>
-    <a href="https://nikel-codai-growdev.netlify.app/" target="-blank">Nikel</a>
-
-    <h2>Projeto Letmeask - NLW06 (RocketSeat) </h2>
-    <p>
-      Projeto Letmeask, oferecido pela Rocketseat. Site feito em React, Sass,
-      Typescript.
-    </p>
-    <a href="https://letmeask-elizabeth.web.app/" target="-blank">Letmeask</a>
-    <h2> Projeto Cartão Virtual - NLW07 (RocketSeat)</h2>
-    <p>
-      Projeto Catão Virtual, oferecido pela RocketSeat. Site feito em Html, Css, JavaScript
-    </p>
-    <a href="https://elizabethesantos.github.io/NLW07-Rocketseat/" target="_blank"> Cartão Virtual</a>
-
-    https://nlw-08-impulse.vercel.app/
-
-    https://doctocare.vercel.app/
+    <div class="card-container">
+      <div class="card-text">
+        <h2>HTML Classico - Curso em Vídeo</h2>
+        <p>
+          Curso ministrado por Gustavo Guanabara no canal do youtube Curso em
+          Vídeo, Canal voltado para pessoas iniciantes que queiram programar.
+          O site foi feito em Html, Css, javascript.
+        </p>
+        <a href="https://projeto-glass-cursoemvideo.netlify.app/" target="-blank">Projeto Glass</a>
+      </div>
+      <div class="card-project">
+        <img src="./assets/projeto-glass.jpeg" alt="site ada">
+      </div>
     </div>
-    </section>
+
+    <div class="card-container">
+      <div class="card-project">
+        <img src="./assets/nikel.jpeg" alt="site ada">
+      </div>
+      <div class="card-text">
+        <h2>Projeto Codaí - Growdev</h2>
+        <a href="https://nikel-codai-growdev.netlify.app/" target="-blank">Nikel</a>
+        <p>
+          Projeto Codaí, oferecido pela GrowDev. Site feito em Bootstrap, Css,
+          Javascript.
+        </p>
+
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-text">
+        <h2>Projeto Letmeask - NLW06 (RocketSeat) </h2>
+        <a href="https://letmeask-elizabeth.web.app/" target="-blank">Letmeask</a>
+        <p>
+          Projeto Letmeask, oferecido pela Rocketseat. Site feito em React, Sass,
+          Typescript.
+        </p>
+      </div>
+      <div class="card-project">
+        <img src="./assets/letmeask-projeto.jpeg" alt="site ada">
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-project">
+        <img src="./assets/cartão virtual.jpeg" alt="site ada">
+      </div>
+      <div class="card-text">
+        <h2> Projeto Cartão Virtual - NLW07 (RocketSeat)</h2>
+        <a href="https://elizabethesantos.github.io/NLW07-Rocketseat/" target="_blank"> Cartão Virtual</a>
+        <p>
+          Projeto Catão Virtual, oferecido pela RocketSeat. Site feito em Html, Css, JavaScript
+        </p>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-text">
+        <h2>React - EUREKA</h2>
+        <a href="https://eureka-react.vercel.app/"
+          target="-blank"> Consulta Cep
+         </a>
+        <p> Curso desenvolvido para primeiros passos em React. </p>
+      </div>
+      <div class="card-project">
+        <img src="./assets/consultaCep.jpeg" alt="Consulta cep">
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-project">
+         <img src="./assets/NLW07-1.jpeg" alt="NLW07">
+      </div>
+      <div class="card-text">
+        <h2>NLW07 - RocketSeat</h2>
+         <!-- <a href="https://dev-contabil-elizabeth.netlify.app/"
+          target="-blank">Dev-Contabil</a> -->
+        <p> -curso de react, node, no NLW07 oferecido pela Rocketseat em um  projeto feito no figma. </p>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-text">
+        <h2>NLW08 - RocketSeat</h2>
+        <a href="https://nlw-08-impulse.vercel.app/" target="-blank">
+          Widget
+        </a>
+        <p>
+          Aplicação construida completa:
+        </p>
+        <p>
+          FrontEnd:
+          React, Typescript, Tailwindcss, Headlessui
+        </p>
+
+        <p>
+          BackEnd: Node do zero, Typescript, Prisma, Express, SOLID, Jest.
+        </p>
+
+        <p>
+          Deploy e Tecnologias usadas <br>
+          Email: Mailtrap,
+          FrontEnd: Vercel,
+          BackEnd: Railway
+        </p>
+      </div>
+      <div class="card-project">
+        <img src="./assets/NLW08-ReturnFrente.jpeg" alt="site ada">
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-project">
+        <img src="./assets/DoctorCare-NLW08.jpeg" alt="site ada">
+      </div>
+      <div class="card-text">
+        <h2>NLW08 - Origin</h2>
+        <a href="https://doctocare.vercel.app/" target="-blank">DoctorCare</a>
+        <p>
+          Aplicação feita em quatro lives no youtube pela RocketSeat que
+          abordam html, css, javascript, em um projeto feito no figma.
+        </p>
+      </div>
+    </div>
+
+
+    <!-- <div class="card-container"> <div class="card-text"> <h2>Eu programo - PrograMaria</h2> <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank"> Site Ada </a> <p> Curso desenvolvido para mulheres que desejam iniciar na área da programação FrontEnd, nele é abordado conceitos basicos de html, css, javascript. </p> </div> <div class="card-project"> <img src="./assets/siteAda.jpeg" alt="site ada"> </div> </div> <div class="card-container"> <div class="card-project"> <img src="./assets/dev-contabil.jpeg" alt="site ada"> </div> <div class="card-text"> <h2>Misão Programação do zero</h2> <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a> <p> Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que abordam html, css, javascript, em um projeto feito no figma. </p> </div> </div> -->
+
   </main>
-  <footer></footer>
+  <footer>
+    <div class="footer">
+      <p> Feito por Elizabeth dos Santos </p>
+      <a href="https://wa.me/5519983511606" target="_blank">
+        <img src="icon-watts.svg" alt="icone WhatsApp">
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
