--- a/contato.html
+++ b/contato.html
@@ -36,8 +36,15 @@
         </div>
       </div>
     </div>
-    <h1>Elizabeth dos Santos</h1>
-    <h2> FrontEnd Developer</h2>
+    <div class="title">
+      <div class="title-text">
+        <h1>Elizabeth dos Santos </h1>
+        <h2>FrontEnd Developer</h2>
+      </div>
+      <div class="image-title">
+        <img src="./assets/elizabeth.jpeg" alt="elizabeth">
+      </div>
+    </div>
     <div class="social-midia">
       <a href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank">Linkedin</a>
       <a href="https://github.com/elizabethesantos" target="_blank">Github</a>
