arrumando as imagens

--- a/projetos.html
+++ b/projetos.html
@@ -160,7 +160,7 @@
       <div class="card-text">
         <h2>NLW07 - RocketSeat</h2>
          <!-- <a href="https://dev-contabil-elizabeth.netlify.app/"
-          target="-blank">Dev-Contabil</a> -->
+          target="-blank">DoWhile</a> -->
         <p> -curso de react, node, no NLW07 oferecido pela Rocketseat em um  projeto feito no figma. </p>
       </div>
     </div>
