--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
                 <a href="#sobre">Sobre</a>
               </li>
               <li>
-                <a href="../projetos/projetos.html">Projetos</a>
+                <a href="./projetos.html">Projetos</a>
               </li>
             </ul>
           </nav>
