--- a/projetos.html
+++ b/projetos.html
@@ -155,7 +155,7 @@
 
     <div class="card-container">
       <div class="card-project">
-         <img src="./assets/NLW07.jpeg" alt="NLW07">
+         <img src="./assets/nlw07-1.jpeg" alt="NLW07">
       </div>
       <div class="card-text">
         <h2>NLW07 - RocketSeat</h2>
