alteração do index

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfólio Elizabeth</title>
   <link rel="stylesheet" href="./style.css">
-  <title>Elizabeth</title>
 </head>
 
 <body>
@@ -36,70 +37,181 @@
         </div>
       </div>
     </div>
-
     <div class="title">
       <div class="title-text">
         <h1>Elizabeth dos Santos </h1>
-        <h2>FrontEnd Developer</h2>
+        <h2>Meus Projetos</h2>
       </div>
       <div class="image-title">
         <img src="./assets/elizabeth.jpeg" alt="elizabeth">
       </div>
     </div>
-
     <div class="social-midia">
       <a href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank">Linkedin</a>
       <a href="https://github.com/elizabethesantos" target="_blank">Github</a>
-      <a href="./projetos.html">Meus projetos</a>
-    </div>
+      <a href="https://wa.me/5519983511606" target="_blank">WhatsApp</a>
   </header>
   <main class="container">
     <div class="card-container">
       <div class="card-text">
+        <h2>Eu programo - PrograMaria</h2>
+        <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank">
+          Site Ada
+        </a>
         <p>
-          Veja meus projetos e minha evolução através do meu <a href="https://github.com/elizabethesantos"
-            target="_blank"> Github </a>. Cada projeto foi feito com muita dedicação e tenho
-          muito orgulho de aprender e evoluir sempre.
+          Curso desenvolvido para mulheres que desejam iniciar na área da
+          programação FrontEnd, nele é abordado conceitos basicos de html,
+          css, javascript.
         </p>
       </div>
-      <div class="card">
-        <div class="card-wrapper">
-          <h2>Github</h2>
-          <p>Veja meus projetos!</p>
-        </div>
+      <div class="card-project">
+        <img src="./assets/siteAda.jpeg" alt="site ada">
       </div>
     </div>
 
     <div class="card-container">
-      <div class="card">
-        <div class="card-wrapper">
-          <h2>Linkedin</h2>
-          <p>Vem ver minha carreira profissional!</p>
-        </div>
+      <div class="card-project">
+        <img src="./assets/dev-contabil.jpeg" alt="site ada">
       </div>
       <div class="card-text">
+        <h2>Misão Programação do zero</h2>
+        <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a>
         <p>
-          Veja minha evolução profissional e aprendizado através do meu <a
-            href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank"> Linkedin </a>.
+          Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que
+          abordam html, css, javascript, em um projeto feito no figma.
         </p>
       </div>
     </div>
 
     <div class="card-container">
       <div class="card-text">
+        <h2>HTML Classico - Curso em Vídeo</h2>
+        <a href="https://projeto-glass-cursoemvideo.netlify.app/" target="-blank">Projeto Glass</a>
         <p>
-          Veja um pouquinho da minha vida pessoal através do meu <a
-            href="https://www.instagram.com/elizabethsantos2487/" target="_blank"> Instagram </a>. Sou uma mulher
-          Transexual em busca de evolução pessoal e profissional. Tenho muito orgulho de quem sou.
+          Curso ministrado por Gustavo Guanabara no canal do youtube Curso em
+          Vídeo, Canal voltado para pessoas iniciantes que queiram programar.
+          O site foi feito em Html, Css, javascript.
         </p>
       </div>
-      <div class="card">
-        <div class="card-wrapper">
-          <h2>Instagram</h2>
-          <p>Ou mais do meu dia-a-dia ;)</p>
-        </div>
+      <div class="card-project">
+        <img src="./assets/projeto-glass.jpeg" alt="site ada">
       </div>
     </div>
+
+    <div class="card-container">
+      <div class="card-project">
+        <img src="./assets/nikel.jpeg" alt="site ada">
+      </div>
+      <div class="card-text">
+        <h2>Projeto Codaí - Growdev</h2>
+        <a href="https://nikel-codai-growdev.netlify.app/" target="-blank">Nikel</a>
+        <p>
+          Projeto Codaí, oferecido pela GrowDev. Site feito em Bootstrap, Css,
+          Javascript.
+        </p>
+
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-text">
+        <h2>Projeto Letmeask - NLW06 (RocketSeat) </h2>
+        <a href="https://letmeask-elizabeth.web.app/" target="-blank">Letmeask</a>
+        <p>
+          Projeto Letmeask, oferecido pela Rocketseat. Site feito em React, Sass,
+          Typescript.
+        </p>
+      </div>
+      <div class="card-project">
+        <img src="./assets/letmeask-projeto.jpeg" alt="site ada">
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-project">
+        <img src="./assets/cartão virtual.jpeg" alt="site ada">
+      </div>
+      <div class="card-text">
+        <h2> Projeto Cartão Virtual - NLW07 (RocketSeat)</h2>
+        <a href="https://elizabethesantos.github.io/NLW07-Rocketseat/" target="_blank"> Cartão Virtual</a>
+        <p>
+          Projeto Catão Virtual, oferecido pela RocketSeat. Site feito em Html, Css, JavaScript
+        </p>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-text">
+        <h2>React - EUREKA</h2>
+        <a href="https://eureka-react.vercel.app/"
+          target="-blank"> Consulta Cep
+         </a>
+        <p> Curso desenvolvido para primeiros passos em React. </p>
+      </div>
+      <div class="card-project">
+        <img src="./assets/consultaCep.jpeg" alt="Consulta cep">
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-project">
+         <img src="./assets/nlw07-1.jpeg" alt="NLW07">
+      </div>
+      <div class="card-text">
+        <h2>NLW07 - RocketSeat</h2>
+         <!-- <a href="https://dev-contabil-elizabeth.netlify.app/"
+          target="-blank">DoWhile</a> -->
+        <p> -curso de react, node, no NLW07 oferecido pela Rocketseat em um  projeto feito no figma. </p>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-text">
+        <h2>NLW08 - RocketSeat</h2>
+        <a href="https://nlw-08-impulse.vercel.app/" target="-blank">
+          Widget
+        </a>
+        <p>
+          Aplicação construida completa:
+        </p>
+        <p>
+          FrontEnd:
+          React, Typescript, Tailwindcss, Headlessui
+        </p>
+
+        <p>
+          BackEnd: Node do zero, Typescript, Prisma, Express, SOLID, Jest.
+        </p>
+
+        <p>
+          Deploy e Tecnologias usadas <br>
+          Email: Mailtrap,
+          FrontEnd: Vercel,
+          BackEnd: Railway
+        </p>
+      </div>
+      <div class="card-project">
+        <img src="./assets/NLW08-ReturnFrente.jpeg" alt="site ada">
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card-project">
+        <img src="./assets/DoctorCare-NLW08.jpeg" alt="site ada">
+      </div>
+      <div class="card-text">
+        <h2>NLW08 - Origin</h2>
+        <a href="https://doctocare.vercel.app/" target="-blank">DoctorCare</a>
+        <p>
+          Aplicação feita em quatro lives no youtube pela RocketSeat que
+          abordam html, css, javascript, em um projeto feito no figma.
+        </p>
+      </div>
+    </div>
+
+
+    <!-- <div class="card-container"> <div class="card-text"> <h2>Eu programo - PrograMaria</h2> <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank"> Site Ada </a> <p> Curso desenvolvido para mulheres que desejam iniciar na área da programação FrontEnd, nele é abordado conceitos basicos de html, css, javascript. </p> </div> <div class="card-project"> <img src="./assets/siteAda.jpeg" alt="site ada"> </div> </div> <div class="card-container"> <div class="card-project"> <img src="./assets/dev-contabil.jpeg" alt="site ada"> </div> <div class="card-text"> <h2>Misão Programação do zero</h2> <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a> <p> Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que abordam html, css, javascript, em um projeto feito no figma. </p> </div> </div> -->
+
   </main>
   <footer>
     <div class="footer">
@@ -110,4 +222,5 @@
     </div>
   </footer>
 </body>
+
 </html>
