--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
                 <a href="./index.html">Home</a>
               </li>
               <li>
-                <a href="./contato.html">Contatos</a>
+                <a href="./principal.html">sobre mim</a>
               </li>
-              <li>
-                <a href="./projetos.html">Projetos</a>
-              </li>
+              
             </ul>
           </nav>
         </div>
