--- a/principal.html
+++ b/principal.html
@@ -48,7 +48,7 @@
     <div class="social-midia">
       <a href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank">Linkedin</a>
       <a href="https://github.com/elizabethesantos" target="_blank">Github</a>
-      <a href="./projetos.html">Meus projetos</a>
+      <a href="https://wa.me/5519983511606" target="_blank">WhatsApp</a>
     </div>
   </header>
   <main class="container">
