add projeto da alura

--- a/index.html
+++ b/index.html
@@ -207,8 +207,22 @@
       </div>
     </div>
 
+    <div class="card-container">
+      <div class="card-project">
+        <img src="./assets/alura-html.jpeg" alt="site barbearia alura">
+      </div>
+      <div class="card-text">
+        <h2>Barbearia Alura</h2>
+        <a href="https://elizabethesantos.github.io/aluraSuzano-html_css_1/" target="_blank">Barbearia Alura</a>
+        <p>
+          Aplicação feita no curso da Alura  que abordam html5, css3.
+        </p>
+      </div>
+    </div>
 
-    <!-- <div class="card-container"> <div class="card-text"> <h2>Eu programo - PrograMaria</h2> <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank"> Site Ada </a> <p> Curso desenvolvido para mulheres que desejam iniciar na área da programação FrontEnd, nele é abordado conceitos basicos de html, css, javascript. </p> </div> <div class="card-project"> <img src="./assets/siteAda.jpeg" alt="site ada"> </div> </div> <div class="card-container"> <div class="card-project"> <img src="./assets/dev-contabil.jpeg" alt="site ada"> </div> <div class="card-text"> <h2>Misão Programação do zero</h2> <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a> <p> Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que abordam html, css, javascript, em um projeto feito no figma. </p> </div> </div> -->
+
+    <!-- <div class="card-container"> <div class="card-text"> <h2>Eu programo - PrograMaria</h2> <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank"> Site Ada </a> <p> Curso desenvolvido para mulheres que desejam iniciar na área da programação FrontEnd, nele é abordado conceitos basicos de html, css, javascript. </p> </div> <div class="card-project"> <img src="./assets/siteAda.jpeg" alt="site ada"> </div> </div>
+       <div class="card-container"> <div class="card-project"> <img src="./assets/dev-contabil.jpeg" alt="site ada"> </div> <div class="card-text"> <h2>Misão Programação do zero</h2> <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a> <p> Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que abordam html, css, javascript, em um projeto feito no figma. </p> </div> </div> -->
 
   </main>
   <footer>
