alterando a lista de inversao

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Meus Projetos</h2>
       </div>
       <div class="image-title">
-        <img src="./assets/elizabeth.jpeg" alt="elizabeth">
+        <img src="./assets/elizabeth.jpeg" alt="Elizabeth">
       </div>
     </div>
     <div class="social-midia">
@@ -150,19 +150,7 @@
         <img src="./assets/consultaCep.jpeg" alt="Consulta cep">
       </div>
     </div>
-
-    <div class="card-container">
-      <div class="card-project">
-         <img src="./assets/nlw07-1.jpeg" alt="NLW07">
-      </div>
-      <div class="card-text">
-        <h2>NLW07 - RocketSeat</h2>
-         <!-- <a href="https://dev-contabil-elizabeth.netlify.app/"
-          target="-blank">DoWhile</a> -->
-        <p> -curso de react, node, no NLW07 oferecido pela Rocketseat em um  projeto feito no figma. </p>
-      </div>
-    </div>
-
+    
     <div class="card-container">
       <div class="card-text">
         <h2>NLW08 - RocketSeat</h2>
@@ -195,13 +183,13 @@
 
     <div class="card-container">
       <div class="card-project">
-        <img src="./assets/DoctorCare-NLW08.jpeg" alt="site ada">
+        <img src="./assets/DoctorCare-NLW08.jpeg" alt="DoctorCare">
       </div>
       <div class="card-text">
         <h2>NLW08 - Origin</h2>
         <a href="https://doctocare.vercel.app/" target="-blank">DoctorCare</a>
         <p>
-          Aplicação feita em quatro lives no youtube pela RocketSeat que
+          Aplicação feita em quatro lives no YouTube pela RocketSeat que
           abordam html, css, javascript, em um projeto feito no figma.
         </p>
       </div>
@@ -209,11 +197,11 @@
 
     <div class="card-container">
       <div class="card-project">
-        <img src="./assets/alura-html.jpeg" alt="site barbearia alura">
+        <img src="./assets/alura-html.jpeg" alt="site barbearia Alura">
       </div>
       <div class="card-text">
         <h2>Barbearia Alura</h2>
-        <a href="https://elizabethesantos.github.io/aluraSuzano-html_css_1/" target="_blank">Barbearia Alura</a>
+        <a href="https://elizabethesantos.github.io/aluraSuzano-html_css_1/" target="-blank">Barbearia Alura</a>
         <p>
           Aplicação feita no curso da Alura  que abordam html5, css3.
         </p>
@@ -226,13 +214,24 @@
       </div>
       <div class="card-text">
         <h2>Transcode</h2>
-        <a href="https://elizabethesantos.github.io/projetoAluraSuzano/" target="_blank">Transcode</a>
+        <a href="https://elizabethesantos.github.io/projetoAluraSuzano/" target="-blank">Transcode</a>
         <p>
           Aplicação feita em Homenagem a Alura e Suzano com aprendizados no curso da Alura  que abordam html5, css3, javascript.
         </p>
       </div>
     </div>
 
+    <!--<div class="card-container">
+      <div class="card-project">
+         <img src="./assets/nlw07-1.jpeg" alt="NLW07">
+      </div>
+      <div class="card-text">
+        <h2>NLW07 - RocketSeat</h2>
+          <a href="https://dev-contabil-elizabeth.netlify.app/"
+          target="-blank">DoWhile</a> 
+        <p> -curso de react, node, no NLW07 oferecido pela Rocketseat em um  projeto feito no figma. </p>
+      </div>
+    </div>-->
 
     <!-- <div class="card-container"> <div class="card-text"> <h2>Eu programo - PrograMaria</h2> <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank"> Site Ada </a> <p> Curso desenvolvido para mulheres que desejam iniciar na área da programação FrontEnd, nele é abordado conceitos basicos de html, css, javascript. </p> </div> <div class="card-project"> <img src="./assets/siteAda.jpeg" alt="site ada"> </div> </div>
        <div class="card-container"> <div class="card-project"> <img src="./assets/dev-contabil.jpeg" alt="site ada"> </div> <div class="card-text"> <h2>Misão Programação do zero</h2> <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a> <p> Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que abordam html, css, javascript, em um projeto feito no figma. </p> </div> </div> -->
