--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </a>
         <p>
           Curso desenvolvido para mulheres que desejam iniciar na área da
-          programação FrontEnd, nele é abordado conceitos basicos de html,
+          programação FrontEnd, nele é abordado conceitos básicos de html,
           css, javascript.
         </p>
       </div>
@@ -72,10 +72,10 @@
         <img src="./assets/dev-contabil.jpeg" alt="site ada">
       </div>
       <div class="card-text">
-        <h2>Misão Programação do zero</h2>
-        <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a>
+        <h2>Missão Programação do zero</h2>
+        <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contábil</a>
         <p>
-          Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que
+          Aplicação feita em quatro lives no YouTube pelo Rodolfo Mori que
           abordam html, css, javascript, em um projeto feito no figma.
         </p>
       </div>
@@ -83,7 +83,7 @@
 
     <div class="card-container">
       <div class="card-text">
-        <h2>HTML Classico - Curso em Vídeo</h2>
+        <h2>HTML Clássico - Curso em Vídeo</h2>
         <a href="https://projeto-glass-cursoemvideo.netlify.app/" target="-blank">Projeto Glass</a>
         <p>
           Curso ministrado por Gustavo Guanabara no canal do youtube Curso em
@@ -233,15 +233,15 @@
       </div>
     </div>-->
 
-    <!-- <div class="card-container"> <div class="card-text"> <h2>Eu programo - PrograMaria</h2> <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank"> Site Ada </a> <p> Curso desenvolvido para mulheres que desejam iniciar na área da programação FrontEnd, nele é abordado conceitos basicos de html, css, javascript. </p> </div> <div class="card-project"> <img src="./assets/siteAda.jpeg" alt="site ada"> </div> </div>
-       <div class="card-container"> <div class="card-project"> <img src="./assets/dev-contabil.jpeg" alt="site ada"> </div> <div class="card-text"> <h2>Misão Programação do zero</h2> <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contabil</a> <p> Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que abordam html, css, javascript, em um projeto feito no figma. </p> </div> </div> -->
+    <!-- <div class="card-container"> <div class="card-text"> <h2>Eu programo - PrograMaria</h2> <a href="https://site-ada-programaria-elizabeth.netlify.app/" target="-blank"> Site Ada </a> <p> Curso desenvolvido para mulheres que desejam iniciar na área da programação FrontEnd, nele é abordado conceitos básicos de html, css, javascript. </p> </div> <div class="card-project"> <img src="./assets/siteAda.jpeg" alt="site ada"> </div> </div>
+       <div class="card-container"> <div class="card-project"> <img src="./assets/dev-contabil.jpeg" alt="site ada"> </div> <div class="card-text"> <h2>Missão Programação do zero</h2> <a href="https://dev-contabil-elizabeth.netlify.app/" target="-blank">Dev-Contábil</a> <p> Aplicação feita em quatro lives no youtube pelo Rodolfo Mori que abordam html, css, javascript, em um projeto feito no figma. </p> </div> </div> -->
 
   </main>
   <footer>
     <div class="footer">
       <p> Feito por Elizabeth dos Santos </p>
       <a href="https://wa.me/5519983511606" target="_blank">
-        <img src="icon-watts.svg" alt="icone WhatsApp">
+        <img src="icon-watts.svg" alt="ícone WhatsApp">
       </a>
     </div>
   </footer>
